crates/diffguard-core/tests/snapshots/snapshot_tests__snapshot_annotations_all_severities.snap
---
source: crates/diffguard-core/tests/snapshot_tests.rs
expression: "annotations.join(\"\\n\")"
---
::notice file=src/lib.rs,line=42::test.rule Test message
::warning file=src/lib.rs,line=42::test.rule Test message
::error file=src/lib.rs,line=42::test.rule Test message
