crates/diffguard-core/tests/snapshots/snapshot_tests__snapshot_annotations_empty.snap
---
source: crates/diffguard-core/tests/snapshot_tests.rs
expression: "annotations.join(\"\\n\")"
---

