crates/diffguard-core/tests/snapshots/snapshot_tests__snapshot_annotations_error_only.snap
---
source: crates/diffguard-core/tests/snapshot_tests.rs
expression: "annotations.join(\"\\n\")"
---
::error file=src/config.rs,line=8::security.no_hardcoded_secret Hardcoded secret detected
