crates/diffguard-core/tests/snapshots/snapshot_tests__snapshot_annotations_nested_path.snap
---
source: crates/diffguard-core/tests/snapshot_tests.rs
expression: "annotations.join(\"\\n\")"
---
::error file=internal/pkg/handlers/auth/middleware/rate_limiter.go,line=157::go.no_panic Avoid panic in library code
