crates/diffguard-core/tests/snapshots/snapshot_tests__snapshot_annotations_special_characters.snap
---
source: crates/diffguard-app/tests/snapshot_tests.rs
expression: "annotations.join(\"\\n\")"
---
::notice file=src/parser.rs,line=100::style.no_fixme FIXME comment: "fix this <urgent>" needs attention
