crates/diffguard-core/tests/snapshots/snapshot_tests__snapshot_json_receipt_mixed.snap
---
source: crates/diffguard-core/tests/snapshot_tests.rs
expression: json
---
{
  "schema": "diffguard.check.v1",
  "tool": {
    "name": "diffguard",
    "version": "0.1.0"
  },
  "diff": {
    "base": "origin/main",
    "head": "HEAD",
    "context_lines": 0,
    "scope": "added",
    "files_scanned": 1,
    "lines_scanned": 2
  },
  "findings": [
    {
      "rule_id": "test.rule",
      "severity": "warn",
      "message": "Test message",
      "path": "src/lib.rs",
      "line": 42,
      "column": 3,
      "match_text": "match",
      "snippet": "let x = match;"
    },
    {
      "rule_id": "test.rule",
      "severity": "error",
      "message": "Test message",
      "path": "src/lib.rs",
      "line": 42,
      "column": 3,
      "match_text": "match",
      "snippet": "let x = match;"
    }
  ],
  "verdict": {
    "status": "fail",
    "counts": {
      "info": 0,
      "warn": 1,
      "error": 1
    },
    "reasons": [
      "1 error(s)",
      "1 warning(s)"
    ]
  }
}
