crates/diffguard-core/tests/snapshots/snapshot_tests__snapshot_json_receipt_no_findings.snap
---
source: crates/diffguard-core/tests/snapshot_tests.rs
expression: json
---
{
  "schema": "diffguard.check.v1",
  "tool": {
    "name": "diffguard",
    "version": "0.1.0"
  },
  "diff": {
    "base": "origin/main",
    "head": "HEAD",
    "context_lines": 3,
    "scope": "added",
    "files_scanned": 5,
    "lines_scanned": 120
  },
  "findings": [],
  "verdict": {
    "status": "pass",
    "counts": {
      "info": 0,
      "warn": 0,
      "error": 0
    },
    "reasons": []
  }
}
